[gd_scene load_steps=3 format=3 uid="uid://dyrsxd3nm3uyv"]

[ext_resource type="Theme" uid="uid://cvocwk6x1wj7h" path="res://config/themes/global.tres" id="1_sfx41"]
[ext_resource type="Script" uid="uid://dh1sfnth40omm" path="res://scripts/components/ui/game_ui/game_ui.gd" id="2_a8s2a"]

[node name="GameUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sfx41")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("2_a8s2a")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="L" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="Dash" type="HBoxContainer" parent="HBoxContainer/L"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/L/Dash"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Dash"

[node name="DashStats" type="ProgressBar" parent="HBoxContainer/L/Dash"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="Control" type="Control" parent="HBoxContainer/L/Dash"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Hover" type="HBoxContainer" parent="HBoxContainer/L"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/L/Hover"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Hover"

[node name="HoverStats" type="ProgressBar" parent="HBoxContainer/L/Hover"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="R" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="PName" type="Label" parent="HBoxContainer/R"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1

[node name="PVersion" type="Label" parent="HBoxContainer/R"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1
